# LocusPocus

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: hatch.yml
docs/: Makefile  conf.py  index.rst  locus_and_loci.rst
locuspocus/: Chromosome.py  Exceptions.py  Fasta.py  Loci.py  Locus.py  LocusDist.pyx  LocusView.py  Plot.py  RefLoci.py  Term.py  Utils.py  __init__.py  chromosome.py  exceptions.py  fasta.py  loci.py  locus.py  locusattrs.py  locusview.py  ontology.py  subloci.py  term.py
locuspocus/loci/: __init__.py  frozenloci.py  loci.py  locimixin.py  memloci.py  view.py
locuspocus/locus/: __init__.py  attrs.py  locusbase.py  locusmixin.py  memlocus.py  subloci.py  thawedlocus.py
locuspocus/locusdb/: __init__.py  frozenlocusdb.py  locusdb.py  locusdbmixin.py  memlocusdb.py
locuspocus/ontology/: __init__.py  term.py
tests/: conftest.py  notest_Term.py  test_Chromosome.py  test_Fasta.py  test_Loci.py  test_Locus.py  test_LocusView.py  test_Ontology.py  test_RefLoci.py  test_Term.py
tests/raw/: ACGT.fasta  maize_small.gff
